manifests/archive/continuwuity/ingressroute.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: uwuroute
# spec:
#   entryPoints:
#   - websecure
#   - web
#   routes:
#   - kind: Rule
#     match: Host(`matrix.nyanyamachine.dev`)
#     services:
#     - name: continuwuity-svc
#       port: 6167
#   tls:
#     certResolver: le

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: continuwuity
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - matrix.nyanyamachine.dev
    secretName: matrix-tls
  rules:
  - host: matrix.nyanyamachine.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: continuwuity-svc
            port:
              number: 6167
